--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,9 +1,9 @@
-name: GitHub Actions Demo
+name: CICD
 
-on: [push]
+on: [ push ]
 
 jobs:
-  Explore-GitHub-Actions:
+  CICD-Pipeline:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,6 +18,8 @@ jobs:
       - name: Run tests with coverage
         run: |
           make test-coverage
+      - name: Upload Coverage to Codecov
+        uses: codecov/codecov-action@v2
       - name: Run linters
         run: |
           make lint
